[package]
name = "multi-db-conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
deadpool-diesel = { version = "0.4.0", features = ["postgres"] }
diesel = "2.0.2"
eyre = "0.6.8"
maplit = "1.0.2"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
